Issue #121: Update RefJxtaLoader such that it can load module's with ContentID package URIs